<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kaQ-iD-p2H">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Main Controller-->
        <scene sceneID="VdI-TO-H3U">
            <objects>
                <viewController id="kaQ-iD-p2H" customClass="MainController" customModule="iosnetworkingexample" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="dI3-7n-hPD">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bdk-WO-5Xu">
                                <rect key="frame" x="115" y="318.5" width="145" height="30"/>
                                <state key="normal" title="Show Random Image"/>
                                <connections>
                                    <action selector="showRandomImageBtn:" destination="kaQ-iD-p2H" eventType="touchUpInside" id="WzE-e3-cPh"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="Bdk-WO-5Xu" firstAttribute="centerX" secondItem="dI3-7n-hPD" secondAttribute="centerX" id="5lG-1B-r4f"/>
                            <constraint firstItem="Bdk-WO-5Xu" firstAttribute="centerY" secondItem="dI3-7n-hPD" secondAttribute="centerY" id="Djv-tY-jdu"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="4VZ-aY-pB6"/>
                    </view>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="show" identifier="GoToPhotoSegue" id="KZx-jY-DaH"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="euP-NR-0Ec" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1009" y="212"/>
        </scene>
        <!--Photo Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="PhotoController" id="BYZ-38-t0r" customClass="PhotoController" customModule="iosnetworkingexample" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="Pxz-gw-nW1">
                                <rect key="frame" x="0.0" y="30" width="375" height="627"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flicker example" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kRx-RG-8RG">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="249" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="4Aa-BR-aIE">
                                        <rect key="frame" x="0.0" y="44" width="375" height="568.5"/>
                                    </imageView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CMn-cE-cU3">
                                        <rect key="frame" x="0.0" y="626.5" width="375" height="0.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <state key="normal" title="Get new image"/>
                                        <connections>
                                            <action selector="getNewImage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jaH-7p-bui"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="Pxz-gw-nW1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="7xk-vj-fhc"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Pxz-gw-nW1" secondAttribute="trailing" id="S5U-pQ-f7c"/>
                            <constraint firstItem="Pxz-gw-nW1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Zh7-3V-S9n"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Pxz-gw-nW1" secondAttribute="bottom" constant="10" id="kwe-O1-Xwl"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="flickerExampleLbl" destination="kRx-RG-8RG" id="DvT-BN-xrO"/>
                        <outlet property="getImageBtn" destination="CMn-cE-cU3" id="ZR7-Gl-yli"/>
                        <outlet property="photoImageView" destination="4Aa-BR-aIE" id="wjI-MK-TZj"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
        </scene>
    </scenes>
</document>
