...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        // Do any additional setup after loading the view, typically from a nib.
        
        //Used by the ui test in order to check if the view has an image or not
        photoImageView.accessibilityIdentifier = "flickerImage"
    }

    override func didReceiveMemoryWarning() {
        super.didReceiveMemoryWarning()
        // Dispose of any resources that can be recreated.
    }
...
                    }
                    
                    if let _ = photo?.image{

                        //Set identifier to be used by the ui unit tests
                        //in order to test that the image has been loaded
                        self.photoImageView.accessibilityIdentifier = "valedFlickerImage"
                    }
                    photo?.saveToContext(completion: { (success, message) in})
                }
            }
        }
        
...
